api/styles: Fix minor layout issue with secondary navbars

--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -367,6 +367,10 @@ $navlinks-spacing: 1.5rem;
   }
 }
 
+.navbar-secondary {
+  display: flex;
+}
+
 /* Button: "view more" */
 
 .view-more {
